--- a/Nextcloud Passwords/Nextcloud Passwords/Base.lproj/Main.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,74 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Nextcloud_Passwords" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nextcloud Passwords" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVo-Oc-Zz6" userLabel="Nextcloud Passwords">
+                                <rect key="frame" x="68.666666666666686" y="30" width="277" height="36"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plese put here your URL in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5AU-d5-6px">
+                                <rect key="frame" x="111" y="125.99999999999999" width="192" height="20.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please put your Credentials here in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIU-vB-J8k">
+                                <rect key="frame" x="81.000000000000014" y="260.33333333333331" width="252.33333333333337" height="20.333333333333314"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ns2-Jz-JgS">
+                                <rect key="frame" x="126.66666666666669" y="166.33333333333334" width="161" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xhu-1h-OCh">
+                                <rect key="frame" x="160" y="300.66666666666669" width="94" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x2v-xV-EW4">
+                                <rect key="frame" x="162" y="344.66666666666669" width="90" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1m2-is-TPP">
+                                <rect key="frame" x="188" y="588.66666666666663" width="38" height="30"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="1m2-is-TPP" firstAttribute="top" secondItem="x2v-xV-EW4" secondAttribute="bottom" constant="210" id="6Yf-wf-jPu"/>
+                            <constraint firstItem="fIU-vB-J8k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8F8-8W-FbO"/>
+                            <constraint firstItem="5AU-d5-6px" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="C7V-ve-qgk"/>
+                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="top" secondItem="fIU-vB-J8k" secondAttribute="bottom" constant="20" id="CfR-mg-Eca"/>
+                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="top" secondItem="5AU-d5-6px" secondAttribute="bottom" constant="20" id="JuD-Cw-zPj"/>
+                            <constraint firstItem="x2v-xV-EW4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="S1v-18-CTI"/>
+                            <constraint firstItem="fIU-vB-J8k" firstAttribute="top" secondItem="Ns2-Jz-JgS" secondAttribute="bottom" constant="60" id="YVG-Fe-J6M"/>
+                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ywz-Id-4cr"/>
+                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bcn-HT-kD7"/>
+                            <constraint firstItem="1m2-is-TPP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eYT-Ct-xeG"/>
+                            <constraint firstItem="KVo-Oc-Zz6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fIW-DC-MRH"/>
+                            <constraint firstItem="x2v-xV-EW4" firstAttribute="top" secondItem="Xhu-1h-OCh" secondAttribute="bottom" constant="10" id="luv-nP-SzC"/>
+                            <constraint firstItem="5AU-d5-6px" firstAttribute="top" secondItem="KVo-Oc-Zz6" secondAttribute="bottom" constant="60" id="rXn-JH-l7y"/>
+                            <constraint firstItem="KVo-Oc-Zz6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="rYT-xK-LNs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
         </scene>
     </scenes>
 </document>
