Change background colour on main.storyboard

--- a/Nextcloud Passwords/Nextcloud Passwords/Storyboards/Base.lproj/Main.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Storyboards/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
                     <view key="view" contentMode="scaleToFill" id="qKC-ey-mfv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.2635597885" green="0.5673190951" blue="0.83532512189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="lcz-XD-ure"/>
                     </view>
                 </viewController>
