--- a/Nextcloud Passwords/Nextcloud Passwords/Storyboards/Base.lproj/Main.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Storyboards/Base.lproj/Main.storyboard
@@ -22,6 +22,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2k-2I-PqF">
+                                <rect key="frame" x="188" y="158" width="38" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <segue destination="3eW-vR-aUp" kind="custom" animates="NO" id="BjB-Wb-Ktr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.2635597885" green="0.5673190951" blue="0.83532512189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="lcz-XD-ure"/>
@@ -29,7 +37,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WVA-Ju-61B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-86" y="-35"/>
+            <point key="canvasLocation" x="-3" y="-170"/>
+        </scene>
+        <!--Login-->
+        <scene sceneID="Ues-nW-gMt">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Login" id="3eW-vR-aUp" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="s0b-50-Pzl"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Wa-UC-0Db" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="540" y="-170"/>
         </scene>
     </scenes>
+    <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
 </document>
