--- a/Nextcloud Passwords/Nextcloud Passwords/Storyboards/Base.lproj/Login.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Storyboards/Base.lproj/Login.storyboard
@@ -15,72 +15,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nextcloud Passwords" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVo-Oc-Zz6" userLabel="Nextcloud Passwords">
-                                <rect key="frame" x="68.666666666666686" y="30" width="277" height="36"/>
-                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plese put here your URL in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5AU-d5-6px">
-                                <rect key="frame" x="111" y="125.99999999999999" width="192" height="20.333333333333329"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please put your Credentials here in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIU-vB-J8k">
-                                <rect key="frame" x="81.000000000000014" y="260.33333333333331" width="252.33333333333337" height="20.333333333333314"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ns2-Jz-JgS">
-                                <rect key="frame" x="126.66666666666669" y="166.33333333333334" width="161" height="34"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="M4p-2F-idO">
+                                <rect key="frame" x="95.666666666666686" y="49.999999999999986" width="223" height="157.66666666666663"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ns2-Jz-JgS">
+                                <rect key="frame" x="126.33333333333333" y="327" width="161.33333333333337" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xhu-1h-OCh">
-                                <rect key="frame" x="160" y="300.66666666666669" width="94" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Passwords" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFF-79-yHX">
+                                <rect key="frame" x="110" y="198" width="194" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="42"/>
+                                <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="loginURL" translatesAutoresizingMaskIntoConstraints="NO" id="SqV-3I-my0">
+                                <rect key="frame" x="91" y="332" width="25.333333333333329" height="25"/>
+                                <color key="backgroundColor" red="0.2635597885" green="0.5673190951" blue="0.83532512189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xhu-1h-OCh">
+                                <rect key="frame" x="126.33333333333333" y="380" width="161.33333333333337" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x2v-xV-EW4">
-                                <rect key="frame" x="162" y="344.66666666666669" width="90" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x2v-xV-EW4">
+                                <rect key="frame" x="126.33333333333333" y="424" width="161.33333333333337" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1m2-is-TPP">
-                                <rect key="frame" x="188" y="588.66666666666663" width="38" height="30"/>
-                                <state key="normal" title="Login">
-                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                </state>
-                                <connections>
-                                    <segue destination="tYW-I2-S1g" kind="showDetail" id="nty-hU-cRA"/>
-                                </connections>
-                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="loginUser" translatesAutoresizingMaskIntoConstraints="NO" id="qrO-67-bpQ">
+                                <rect key="frame" x="91" y="383" width="25.333333333333329" height="25"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="loginPassword" translatesAutoresizingMaskIntoConstraints="NO" id="fDM-4b-wSK">
+                                <rect key="frame" x="91" y="434" width="25.333333333333329" height="25"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.2635597885" green="0.5673190951" blue="0.83532512189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="1m2-is-TPP" firstAttribute="top" secondItem="x2v-xV-EW4" secondAttribute="bottom" constant="210" id="6Yf-wf-jPu"/>
-                            <constraint firstItem="fIU-vB-J8k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8F8-8W-FbO"/>
-                            <constraint firstItem="5AU-d5-6px" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="C7V-ve-qgk"/>
-                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="top" secondItem="fIU-vB-J8k" secondAttribute="bottom" constant="20" id="CfR-mg-Eca"/>
-                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="top" secondItem="5AU-d5-6px" secondAttribute="bottom" constant="20" id="JuD-Cw-zPj"/>
+                            <constraint firstItem="qrO-67-bpQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="6f4-KE-Nnb"/>
+                            <constraint firstItem="M4p-2F-idO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="94i-td-3nP"/>
+                            <constraint firstItem="fDM-4b-wSK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="Ahp-Ji-jvD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xhu-1h-OCh" secondAttribute="trailing" constant="126.33" id="DMU-JG-4ha"/>
+                            <constraint firstItem="x2v-xV-EW4" firstAttribute="leading" secondItem="fDM-4b-wSK" secondAttribute="trailing" constant="10" id="GQF-4p-gb1"/>
+                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="leading" secondItem="SqV-3I-my0" secondAttribute="trailing" constant="10" id="O7C-cF-g0b"/>
                             <constraint firstItem="x2v-xV-EW4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="S1v-18-CTI"/>
-                            <constraint firstItem="fIU-vB-J8k" firstAttribute="top" secondItem="Ns2-Jz-JgS" secondAttribute="bottom" constant="60" id="YVG-Fe-J6M"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="x2v-xV-EW4" secondAttribute="trailing" constant="126.33" id="T0U-jD-Cf5"/>
                             <constraint firstItem="Ns2-Jz-JgS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ywz-Id-4cr"/>
+                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="leading" secondItem="qrO-67-bpQ" secondAttribute="trailing" constant="10" id="aXX-tc-p7k"/>
                             <constraint firstItem="Xhu-1h-OCh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bcn-HT-kD7"/>
-                            <constraint firstItem="1m2-is-TPP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eYT-Ct-xeG"/>
-                            <constraint firstItem="KVo-Oc-Zz6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fIW-DC-MRH"/>
+                            <constraint firstItem="M4p-2F-idO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e1d-2p-zko"/>
+                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="leading" secondItem="SqV-3I-my0" secondAttribute="trailing" constant="10" id="e2h-G5-hhn"/>
+                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="top" secondItem="Ns2-Jz-JgS" secondAttribute="bottom" constant="8.6699999999999999" id="lWc-3c-BR8"/>
                             <constraint firstItem="x2v-xV-EW4" firstAttribute="top" secondItem="Xhu-1h-OCh" secondAttribute="bottom" constant="10" id="luv-nP-SzC"/>
-                            <constraint firstItem="5AU-d5-6px" firstAttribute="top" secondItem="KVo-Oc-Zz6" secondAttribute="bottom" constant="60" id="rXn-JH-l7y"/>
-                            <constraint firstItem="KVo-Oc-Zz6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="rYT-xK-LNs"/>
+                            <constraint firstItem="SqV-3I-my0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="qSy-4X-cPX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ns2-Jz-JgS" secondAttribute="trailing" constant="126.33" id="rQs-WX-vDK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
+            <point key="canvasLocation" x="131.8840579710145" y="138.58695652173915"/>
         </scene>
         <!--Main-->
         <scene sceneID="28X-hb-jdv">
@@ -93,4 +90,10 @@
             <point key="canvasLocation" x="765" y="139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="loginPassword" width="25" height="25"/>
+        <image name="loginURL" width="25" height="25"/>
+        <image name="loginUser" width="25" height="25"/>
+        <image name="logo" width="223" height="157.5"/>
+    </resources>
 </document>
