--- a/Nextcloud Passwords/Nextcloud Passwords/Storyboards/Base.lproj/Login.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Storyboards/Base.lproj/Login.storyboard
@@ -10,7 +10,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Nextcloud_Passwords" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginStoryboard" id="BYZ-38-t0r" customClass="ViewController" customModule="Nextcloud_Passwords" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -18,59 +18,57 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="M4p-2F-idO">
                                 <rect key="frame" x="95.666666666666686" y="49.999999999999986" width="223" height="157.66666666666663"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ns2-Jz-JgS">
-                                <rect key="frame" x="126.33333333333333" y="327" width="161.33333333333337" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ns2-Jz-JgS">
+                                <rect key="frame" x="126" y="326.66666666666669" width="162" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Passwords" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFF-79-yHX">
-                                <rect key="frame" x="110" y="198" width="194" height="58"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xhu-1h-OCh">
+                                <rect key="frame" x="126" y="370.66666666666669" width="162" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x2v-xV-EW4">
+                                <rect key="frame" x="126" y="414.66666666666669" width="162" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UIz-Dq-wbc">
+                                <rect key="frame" x="185.66666666666666" y="518.66666666666663" width="43" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Save">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passwords" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFF-79-yHX">
+                                <rect key="frame" x="110" y="208.66666666666666" width="194" height="57.999999999999972"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="42"/>
                                 <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="loginURL" translatesAutoresizingMaskIntoConstraints="NO" id="SqV-3I-my0">
-                                <rect key="frame" x="91" y="332" width="25.333333333333329" height="25"/>
-                                <color key="backgroundColor" red="0.2635597885" green="0.5673190951" blue="0.83532512189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                            </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xhu-1h-OCh">
-                                <rect key="frame" x="126.33333333333333" y="380" width="161.33333333333337" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x2v-xV-EW4">
-                                <rect key="frame" x="126.33333333333333" y="424" width="161.33333333333337" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="loginUser" translatesAutoresizingMaskIntoConstraints="NO" id="qrO-67-bpQ">
-                                <rect key="frame" x="91" y="383" width="25.333333333333329" height="25"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="loginPassword" translatesAutoresizingMaskIntoConstraints="NO" id="fDM-4b-wSK">
-                                <rect key="frame" x="91" y="434" width="25.333333333333329" height="25"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.2635597885" green="0.5673190951" blue="0.83532512189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="qrO-67-bpQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="6f4-KE-Nnb"/>
+                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="126" id="0H0-1W-zGU"/>
                             <constraint firstItem="M4p-2F-idO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="94i-td-3nP"/>
-                            <constraint firstItem="fDM-4b-wSK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="Ahp-Ji-jvD"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xhu-1h-OCh" secondAttribute="trailing" constant="126.33" id="DMU-JG-4ha"/>
-                            <constraint firstItem="x2v-xV-EW4" firstAttribute="leading" secondItem="fDM-4b-wSK" secondAttribute="trailing" constant="10" id="GQF-4p-gb1"/>
-                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="leading" secondItem="SqV-3I-my0" secondAttribute="trailing" constant="10" id="O7C-cF-g0b"/>
-                            <constraint firstItem="x2v-xV-EW4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="S1v-18-CTI"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="x2v-xV-EW4" secondAttribute="trailing" constant="126.33" id="T0U-jD-Cf5"/>
-                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ywz-Id-4cr"/>
-                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="leading" secondItem="qrO-67-bpQ" secondAttribute="trailing" constant="10" id="aXX-tc-p7k"/>
-                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bcn-HT-kD7"/>
+                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="top" secondItem="RFF-79-yHX" secondAttribute="bottom" constant="60" id="HQy-mN-o09"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xhu-1h-OCh" secondAttribute="trailing" constant="126" id="Rnb-LG-CLa"/>
+                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TlP-rW-fNW"/>
+                            <constraint firstItem="x2v-xV-EW4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="126" id="VDg-f0-1x6"/>
+                            <constraint firstItem="RFF-79-yHX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="110" id="Vkf-id-5zv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="x2v-xV-EW4" secondAttribute="trailing" constant="126" id="bEF-Cl-lmh"/>
                             <constraint firstItem="M4p-2F-idO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e1d-2p-zko"/>
-                            <constraint firstItem="Ns2-Jz-JgS" firstAttribute="leading" secondItem="SqV-3I-my0" secondAttribute="trailing" constant="10" id="e2h-G5-hhn"/>
-                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="top" secondItem="Ns2-Jz-JgS" secondAttribute="bottom" constant="8.6699999999999999" id="lWc-3c-BR8"/>
-                            <constraint firstItem="x2v-xV-EW4" firstAttribute="top" secondItem="Xhu-1h-OCh" secondAttribute="bottom" constant="10" id="luv-nP-SzC"/>
-                            <constraint firstItem="SqV-3I-my0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="qSy-4X-cPX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ns2-Jz-JgS" secondAttribute="trailing" constant="126.33" id="rQs-WX-vDK"/>
+                            <constraint firstItem="RFF-79-yHX" firstAttribute="top" secondItem="M4p-2F-idO" secondAttribute="bottom" constant="1" id="eVH-s8-tVc"/>
+                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fTD-5N-HCx"/>
+                            <constraint firstItem="RFF-79-yHX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hus-dC-4Is"/>
+                            <constraint firstItem="x2v-xV-EW4" firstAttribute="top" secondItem="Xhu-1h-OCh" secondAttribute="bottom" constant="10" id="i3q-8d-CbE"/>
+                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="126" id="nZe-6Y-Vkn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RFF-79-yHX" secondAttribute="trailing" constant="110" id="oig-P2-Gc4"/>
+                            <constraint firstItem="Xhu-1h-OCh" firstAttribute="top" secondItem="Ns2-Jz-JgS" secondAttribute="bottom" constant="10" id="owJ-3A-fFX"/>
+                            <constraint firstItem="UIz-Dq-wbc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sUe-mx-l7I"/>
+                            <constraint firstItem="UIz-Dq-wbc" firstAttribute="top" secondItem="x2v-xV-EW4" secondAttribute="bottom" constant="70" id="uj4-wA-bnn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ns2-Jz-JgS" secondAttribute="trailing" constant="126" id="xHP-XO-3hu"/>
+                            <constraint firstItem="x2v-xV-EW4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xe7-1V-sUR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -79,21 +77,8 @@
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="138.58695652173915"/>
         </scene>
-        <!--Main-->
-        <scene sceneID="28X-hb-jdv">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Main" id="tYW-I2-S1g" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="u2D-Wf-WNd"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1yj-N8-hIS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="765" y="139"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="loginPassword" width="25" height="25"/>
-        <image name="loginURL" width="25" height="25"/>
-        <image name="loginUser" width="25" height="25"/>
         <image name="logo" width="223" height="157.5"/>
     </resources>
 </document>
